--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class = "img-area">
-    <img id = "slides" src="./DIG_プレゼン/スライド1.jpeg">
+    <img id = "slides" src="https://github.com/Roney-a/dig_final/blob/main/DIG_%E3%83%95%E3%82%9A%E3%83%AC%E3%82%BB%E3%82%99%E3%83%B3/%E3%82%B9%E3%83%A9%E3%82%A4%E3%83%88%E3%82%991.jpeg">
   </div>
   <div class = "input">
     <button id = "back"> << Go Back</button>
