--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class = "img-area">
-    <img id = "slides" src="DIG_プレゼン/スライド1.jpeg">
+    <img id = "slides" src="slides/slide1.jpeg">
   </div>
   <div class = "input">
     <button id = "back"> << Go Back</button>
